--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 
   <div id="body"></div>
 
-  <div class="error-message">
+  <!-- <div class="error-message">
     <p>All Fields Are Required</p>
   </div>
 
   <div class="success-message">
     <p>Sending Message ...</p>
-  </div>
+  </div> -->
 
   <div class="spinner">
     <div class="spinner-layer spinner-blue">
