--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <h1 id="name">ABDUL ELAH JS</h1>
       <div id="overview">
         <p>
-          Prolific, full stack web and mobile developer with a passion for metrics and beating former “best-yets.”. Consistently
+          Prolific, full stack web and mobile developer with passion for metrics and beating former “best-yets.”. Consistently
           receiving high user experience scores for all web and mobile development projects, Passionate about building world
           class web and mobile applications.
         </p>
