Updated Telegram Link

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="social-media-btn-container">
           <a target="_blank" href="https://twitter.com/abdulelah_js"> <i class="fab fa-twitter"></i> </a>
           <a target="_blank" href="https://linkedin.com/in/abdul-elah-js/"> <i class="fab fa-linkedin-in"></i> </a>
-          <a target="_blank" href="https://t.me/abdul_elah"> <i class="fab fa-telegram"></i> </a>
+          <a target="_blank" href="https://t.me/abdulelah_js"> <i class="fab fa-telegram"></i> </a>
           <a target="_blank" href="https://www.instagram.com/abdul.elah.js/"> <i class="fab fa-instagram"></i> </a>
         </div>
       </div>
